TBD        1.2 Release

           o process SQL consistently when the sql is dumped because an exception occurred.

           o new SQL formatter to more reliably dump sql that can be run for MySql (Issue 34)

           o don't show debug info in sql timing dump unless debug is enabled on the logger
             (to make the sql timing dump consistent with the way other the loggers work)

           o add new option, log4jdbc.trim.sql.extrablanklines for removing
             extra blank lines from sql output.

           o fix issue where extra connection was being created when 
             ResultSet.getStatement was being called (Issue 33.)

           o performance enhancement when logging not enabled (Issue 29.)

2010-06-09 1.2 beta 2 Release

           o add new option, log4jdbc.auto.load.popular.drivers for 
             disabling auto-loading of drivers

           o look first for log4jdbc property settings in optional 
             log4jdbc.properties file in the classpath.
             
           o Fix non-threadsafe usage of SimpleDateFormat (Issue 18)

           o add new option, log4jdbc.trim.sql to trim the SQL before logging
             it.

           o add new option, log4jdbc.suppress.generated.keys.exception that
             will ignore any exception produced by the method, 
             Statement.getGeneratedKeys().  This flag is useful in Coldfusion
             environments which typically call this method after every update,
             even if unwarranted, and ignoring the exception, thus clogging up 
             the logs with these exception reports.

           o add support for the newer oracle.jdbc.OracleDriver driver (the
             older oracle.jdbc.driver.OracleDriver driver is still supported
             as well) and add corrected date formatting for Oracle.
             
           o fix possible null pointer issue with setBlob and setClob (Issue 21)

2010-03-20 1.2 beta 1 Release
