@@ -1,8 +1,10 @@
 TBD        1.2 Release
 
+           o escape single quotes in PreparedStatement/CallableStatement bind variables (Issue 36.)
+
            o process SQL consistently when the sql is dumped because an exception occurred.
 
-           o new SQL formatter to more reliably dump sql that can be run for MySql (Issue 34)
+           o new SQL formatter to more reliably dump sql that can be run for MySql (Issue 34.)
 
            o don't show debug info in sql timing dump unless debug is enabled on the logger
              (to make the sql timing dump consistent with the way other the loggers work)
